chore: configured app

--- a/src/app/views/test/test.component.html
+++ b/src/app/views/test/test.component.html
@@ -1,6 +1,10 @@
 <div class="container-fluid">
     <div class="container">
         <p>Welcome to eCommerce</p>
-        <button>Get started</button>
+        <button> 
+            <a href="https://github.com/Open-RCA/eCom-ng-frontend-2/blob/main/README.md" target="_blank">
+            Get Started
+           </a>
+        </button>
     </div>
 </div>
