--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,1 +1,6 @@
 $base-color: #574AE2;
+$table-header: #1976D2;
+$table-header-color: #000000;
+$table-border: #E5E5E5;
+$row-bg: #ffffff;
+$bg-customers:$row-bg;
