First commit for navbar and sidebar

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,1 +1,10 @@
 $base-color: #574AE2;
+$form-fields: #EEF0F2; 
+$black-text: #000000;
+$success: #0CCE6B;
+$fail-notifications: #E63946;
+$pending-orders: #FFBB00;
+$white: #FFFFFF;
+$text-grey: #9A9A9A;
+
+
