--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" *ngIf ="user=='Admin'">
+<div class="container-fluid" *ngIf ="user!='Admin'">
         <div class="sidebar">
           <div class="top-desc">
             <a href=""> E-commerce</a>
