--- a/src/app/views/customers/customers.component.html
+++ b/src/app/views/customers/customers.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="sidebar">
     <app-sidebar></app-sidebar>
+    <p>Hello</p>
   </div>
   <!-- <div class="content">
     <div class="customers-tbl">
