--- a/src/app/views/dashboard/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard/dashboard.component.html
@@ -1,2 +1,3 @@
-<!-- <app-navbar></app-navbar> -->
-<app-sidebar></app-sidebar>
+<app-navbar></app-navbar>
+<!-- <app-sidebar></app-sidebar> -->
+<app-admin-sidebar></app-admin-sidebar>
