Hard coded design

--- a/src/app/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin-sidebar/admin-sidebar.component.html
@@ -1,34 +1,38 @@
 <div class="container-fluid">
+<div class="content">    
 <div class="sidebar">
-  <span><a href="">E-commerce</a></span>
+    <div class="sidebarLogo">
+        <img src="../../../assets/images/E-commerce.png" />
+    </div>
 <div class="nav-links">
-    <div>
-        <img src="https://img.icons8.com/metro/26/000000/pie-chart.png"/>
+    <div class="dashboard">
+        <img src="../../../assets/images/chart.png"/>
         <a href="">Dashboard</a>
     </div>
-    <div>
+    <div class="orders">
        
-        <img src="../../../assets/icons/shopping-bag.svg"/>
+        <img src="../../../assets/images/Vector.png"/>
         <a href="">Orders</a>
     </div>
   
    <div>
-       <img src="../../../assets/icons/shopping-bag.svg" />
+       <img src="../../../assets/images/Vector (1).png" />
     <a>Products</a>
    </div>
    
     <div>
-        <img src="../../../assets/icons/adminInbox.svg"/>
+        <img src="../../../assets/images/Vector (2).png"/>
         <a href="">Customers</a>
     </div>
    
     <div>
-        <img src="https://img.icons8.com/cotton/64/ffffff/settings--v1.png"/>
+        <img src="../../../assets/images/Vector (3).png"/>
         <a href="">Settings</a>
     </div>
 <div class="help">
- <img src="../../../assets/icons/help_outline-black-18dp.svg"/>
+ <img src="../../../assets/images/Vector (4).png"/>
   <a href="">Help</a>
+</div>
 </div>
 </div>
 </div>
