--- a/src/app/components/admin-body/admin-body.component.html
+++ b/src/app/components/admin-body/admin-body.component.html
@@ -9,30 +9,69 @@
   <div class="customers">
     <img src="../../../assets/images/Vector (5).png" />
   </div>
+  <p>
+      <span class="trending">
+          <img src="../../../assets/images/trending.png" />
+          <span class="number">
+              <a href="">+250%</a> this month
+          </span>
+      </span>
+  </p>
  </div>
  <div class="users orders">
     <span class="sp1">Total Orders</span>
-    <span class="sp2">1,200</span>
+    <span class="sp2">878</span>
     <div class="customers">
       <img src="../../../assets/images/Vector (6).png" />
     </div>
+    <p>
+        <span class="trending">
+            <img src="../../../assets/images/trending-down.png" />
+            <span class="number">
+                <a href="">-40%</a> this month
+            </span>
+        </span>
+    </p>
    </div>
    <div class="users revenue">
     <span class="sp1">Total Revenue</span>
-    <span class="sp2">1,200</span>
+    <span class="sp2">$2000</span>
     <div class="customers">
       <img src="../../../assets/images/dollar.png" />
     </div>
+    <p>
+        <span class="trending">
+            <img src="../../../assets/images/trending.png" />
+            <span class="number">
+                <a href="">+25%</a> this month
+            </span>
+        </span>
+    </p>
    </div>
    <div class="users sales">
     <span class="sp1">Total Sales</span>
-    <span class="sp2">1,200</span>
+    <span class="sp2">1000</span>
     <div class="customers">
       <img src="../../../assets/images/Vector (5).png" />
     </div>
+    <p>
+        <span class="trending">
+            <img src="../../../assets/images/trending.png" />
+            <span class="number">
+                <a href="">+1.2%</a> this month
+            </span>
+        </span>
+    </p>
    </div>
-   <div class="statistics">
-    <span>convas statistics</span>
+   <div class="statistics" onclick="displayCalendar()">
+    <span>Sales details</span>
+            <select class="selection">
+                <option value="">Last 7 days</option>
+                <option value="">Last 7 days</option>
+                <option value="">Last 7 days</option>
+                <option value="">Last 7 days</option>
+                <option value="">Last 7 days</option>
+                </select>
    </div>
    <div class="calendar">
     <span>calendar</span>
