--- a/src/app/components/admin-body/admin-body.component.scss
+++ b/src/app/components/admin-body/admin-body.component.scss
@@ -30,18 +30,18 @@
     top: 1em;
 }
 .customers{
-    width: 80px;
-    height: 80px;
+    width: 60px;
+    height: 60px;
     background: rgba(87, 74, 226, 0.08);
-    margin-left: 8em;
-    margin-top: -2em;
+    margin-left: 10em;
+    margin-top: -3em;
     border-radius: 50%;
 }
 .customers img{
     margin-top: 1em;
-    margin-left: 1.5em;
-    width: 25px;
-    height: 40px;
+    margin-left: 1.2em;
+    width: 20px;
+    height: 30px;
 }
 .orders{
     margin-left: 20em;
@@ -62,6 +62,11 @@
     margin-top: 1em;
     border-radius: 5px;
     box-shadow: 1px 1px 1px 1px #ccc;
+    background:#C4C4C4;
+}
+.statistics span{
+    padding-left: 2em;
+    font-weight: bold;
 }
 .calendar{
     height: 300px;
@@ -69,4 +74,19 @@
     margin-left: 43em;
     margin-top: -18.8em;
     box-shadow: 1px 1px 1px 1px #ccc;
+}
+.selection{
+    margin-left: 25em;
+    margin-top: 2em;
+    border-radius: 23.5px;
+    height: 30px;
+    background: #c4c4c4;
+}
+.trending img{
+    width: 25px;
+    height: 15px;
+}
+.number a{
+    text-decoration: none;
+    color: #0CCE6B;
 }
