--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,9 @@
 @import url('https://rsms.me/inter/inter.css');
 html { 
     font-family: 'Inter', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
  }
 @supports (font-variation-settings: normal) {
   html { font-family: 'Inter var', sans-serif; }
@@ -9,3 +12,4 @@ html {
 :focus{
     outline: none;
 }
+
