chore: added secondar shop navbar

--- a/src/app/components/shop-navbar/shop-navbar.component.html
+++ b/src/app/components/shop-navbar/shop-navbar.component.html
@@ -17,7 +17,26 @@
         <img src="../../../assets/icons/shopping-bag-icon.png" alt="shopping bag icon">
       </div>
     </div>
+    <!--Secondar nav-->
     <div class="secondary-nav-container">
+       <div class="select-btn">
+          <ul>
+            <li>
+              <img src="../../../assets/icons/vector-icon.png" alt="vector icon">
+            </li>
+            <li>Browse by category</li>
+            <li>
+              <img src="../../../assets/icons/select-icon.png" alt="select icon">
+            </li>
+          </ul>
+       </div>
+       <div class="navs-container">
+          <ul>
+            <li>Home</li>
+            <li>Shop</li>
+            <li>Contact</li>
+          </ul>
+       </div>
        
     </div>
   </div>
