--- a/src/app/components/shop-navbar/shop-navbar.component.scss
+++ b/src/app/components/shop-navbar/shop-navbar.component.scss
@@ -9,12 +9,11 @@
 }
 .container{
     width: 90%;
-    height: 50px;
+    height: max-content;
     padding: 0px 0px 10px 0px;
 }
 .primary-nav-container{
     width: 100%;
-    // background-color: red;
     display: flex;
     justify-content: space-between;
 }
@@ -48,7 +47,6 @@
 .search-input-wrapper{
     width: 30%;
     height: 35px;
-    // background: green;
     margin-top: 1em;
     display: flex;
     justify-content: space-between;
@@ -74,7 +72,6 @@
      }
 }
 .top-icons-wrapper{
-    // background: red;
     width: 10%;
     display: flex;
     justify-content: space-between;
@@ -82,5 +79,44 @@
     img{
         width: 20px;
         height: 20px;
+    }
+}
+
+.secondary-nav-container{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    ul{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        li{
+            list-style-type: none;
+        }
+    }
+    .select-btn ul{
+        background: $base-color;
+        color: $white;
+        font-size: 13px;
+        padding: 0px 15px 0px 15px;
+        height: 85%;
+        align-items: center;
+        img{
+            width: 15px;
+        }
+    }
+    .select-btn ul:hover{
+        transform: scale(1.01);
+        cursor: pointer;
+    }
+    .navs-container ul{
+        width: 230px;
+        height: 100%;
+        align-items: center;
+        li{
+            font-size: 14px;
+            font-weight: bold;
+            cursor: pointer;
+        }
     }
 }
