fit- added shop sidebar

--- a/src/app/views/shop/shop/shop.component.html
+++ b/src/app/views/shop/shop/shop.component.html
@@ -2,7 +2,9 @@
     <div class="nav-bar">
         <app-shop-navbar></app-shop-navbar>
     </div>
-    <div class="sidebar">
-
+    <div class="content-wrapper">
+        <div class="sidebar">
+            <app-shop-sidebar></app-shop-sidebar>
+         </div>
     </div>
-</div>
+   </div>
