--- a/src/app/views/shop/shop/shop.component.html
+++ b/src/app/views/shop/shop/shop.component.html
@@ -6,5 +6,9 @@
         <div class="sidebar">
             <app-shop-sidebar></app-shop-sidebar>
          </div>
+         <div class="products-container">
+            <app-products></app-products>
+        </div>
     </div>
+    
    </div>
