--- a/src/app/components/shop-navbar/shop-navbar.component.scss
+++ b/src/app/components/shop-navbar/shop-navbar.component.scss
@@ -7,7 +7,7 @@
   justify-content: space-around;
   border-bottom:  1px solid $text-grey;
 }
-.container{
+.nav-container{
     width: 90%;
     height: max-content;
     padding: 0px 0px 10px 0px;
@@ -39,7 +39,7 @@
 
   img {
     width: 25px;
-    
+
   }
 
 }
