--- a/src/app/components/shop-sidebar/shop-sidebar.component.scss
+++ b/src/app/components/shop-sidebar/shop-sidebar.component.scss
@@ -13,4 +13,9 @@
             }
         }
     }
+    .sidebar-shop{
+      padding: 10px;
+      margin-left: 0;
+      margin-top: 4em;
+    }
 }
