--- a/src/app/views/customers/customers.component.html
+++ b/src/app/views/customers/customers.component.html
@@ -1,42 +1,68 @@
-<div class="container">
-  <div class="sidebar">
-    <app-sidebar></app-sidebar>
-    <p>Hello</p>
-  </div>
-  <!-- <div class="content">
-    <div class="customers-tbl">
-      <table class="table-container" width="100%" role="table" aria-label="Destinations">
-        <thead>
-          <tr class="flex-table header" role="rowgroup">
-            <th class="flex-row first" role="columnheader">Customer Id</th>
-            <th class="flex-row" role="columnheader">Customer fname</th>
-            <th class="flex-row" role="columnheader">Customer Lname</th>
-            <th class="flex-row" role="columnheader">Customer Email</th>
-            <th class="flex-row" role="columnheader">Billing Address</th>
-            <th class="flex-row" role="columnheader">Default Shipping Address</th>
-            <th class="flex-row" role="columnheader">Country</th>
-            <th class="flex-row" role="columnheader">Phone</th>
-            <th class="flex-row" role="columnheader">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="flex-table row" role="rowgroup" *ngFor="let customer of customers">
-            <td class="flex-row first" role="cell"><span class="flag-icon flag-icon-gb"></span> {{customer.id}}</td>
-            <td class="flex-row" role="cell"> {{customer.fname}} </td>
-            <td class="flex-row" role="cell"> {{customer.lname}} </td>
-            <td class="flex-row" role="cell">{{customer.email}}</td>
-            <td class="flex-row" role="cell">{{customer.billingAddress}} </td>
-            <td class="flex-row" role="cell"> {{customer.ShippingAddress}} </td>
-            <td class="flex-row" role="cell">{{customer.country}}</td>
-            <td class="flex-row" role="cell"> {{customer.Phone}} </td>
-            <td class="flex-row" role="cell">
-            <img src="../../../../assets/images/more-alt.svg" alt="">
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-2">
+      <div class="sidebar">
+        <app-sidebar></app-sidebar>
       </div>
     </div>
-  </div> -->
+    <div class="col-md-10 main-dash">
+      <div class="row overview">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-12 top">
+              <!-- <app-navbar></app-navbar> -->
+            </div>
+          </div>
+          <div class="content">
+            <div class="row">
+              <div class="col-md-9">
+                <h3>Customers</h3>
+              </div>
+              <div class="col-md-3 addP">
+                <a class="btn">+ Add Customer</a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="card p-3">
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <table class="table table-hover">
+                          <thead>
+                            <tr>
+                              <th scope="col">#</th>
+                              <th scope="col">Customer Name</th>
+                              <th scope="col">Customer Email</th>
+                              <th scope="col">Instock</th>
+                              <th scope="col">Category</th>
+                              <th scope="col">Price</th>
+                              <th scope="col">Action</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr *ngFor="let customer of customers">
+                              <td>{{customer.customerId}}</td>
+                              <td>{{customer.customerName}}</td>
+                              <td>{{customer.customerId}}</td>
+                              <td>{{customer.InStock}}</td>
+                              <td>{{customer.category}}</td>
+                              <td>{{customer.price}}</td>
+                              <td>
+                                <img src="../.././../assets/images/more-alt-2.svg" alt="">
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
