--- a/src/app/components/shop-navbar/shop-navbar.component.html
+++ b/src/app/components/shop-navbar/shop-navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="container">
+  <div class="nav-container">
     <div class="primary-nav-container">
       <div class="bland-logo-wrapper">
           <div class="logo-wrapper">
@@ -37,7 +37,7 @@
             <li>Contact</li>
           </ul>
        </div>
-       
+
     </div>
   </div>
 
