--- a/src/app/components/shop-sidebar/shop-sidebar.component.html
+++ b/src/app/components/shop-sidebar/shop-sidebar.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <div class="sidebar-shop">
     <ul>
         <li>
             <img src="../../../assets/icons/star-icon.svg" alt="star icon">
@@ -33,4 +34,5 @@
             <h5>Gifts and Toys</h5>
         </li>
     </ul>
+</div>
 </div>
