--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,62 @@
+<div class="container-fuid">
+  <div class="sidebar p-4" id="sidebar">
+    <div class="sidebar-content">
+
+        <div class="top-desc">
+          <a href=""> E-commerce</a>
+        </div>
+      </div>
+      <div class="nav-linnks">
+        <div class="nav-links">
+          <div class="sub-nav-link">
+          <a class="" routerLink="/dashboard" [ngClass]="{'activeSpan': currentPage === '/'} ">
+            <img src="../../../assets/images/dashboard.svg">
+            Dashboard</a>
+          </div>
+          <a routerLink="/orders" [ngClass]="{'activeSpan': currentPage === '/orders'} ">
+            <img src="../../../assets/images/orders.svg">
+            Orders</a>
+          <a routerLink="/products" [ngClass]="{'activeSpan': currentPage === '/shop'} ">
+            <img src="../../../assets/images/products.svg">
+            Products</a>
+          <a routerLink="/customers" [ngClass]="{'activeSpan': currentPage === '/customers'} ">
+            <img src="../../../assets/images/customers.svg">
+            Customers</a>
+          <a routerLink="/settings" [ngClass]="{'activeSpan': currentPage === '/shop'} ">
+            <img src="../../../assets/images/settings.svg">
+            Settings</a>
+        </div>
+      </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+
 <div class="container-fluid" *ngIf ="user=='Admin'">
         <div class="sidebar">
           <div class="top-desc">
@@ -23,4 +82,4 @@
               Settings</a>
           </div>
         </div>
-</div>
+</div> -->
