--- a/src/app/views/shop/products/products.component.scss
+++ b/src/app/views/shop/products/products.component.scss
@@ -4,6 +4,7 @@
 .container-header{
     display: flex;
     justify-content: space-between;
+    margin-top: 3em;
 }
 .filters{
     width: 25%;
@@ -32,12 +33,13 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-top: 4em;
 }
 .product-container{
     width: 30%;
     height: 350px;
-    
-    
+
+
 }
 .img-card{
     width: 100%;
@@ -64,7 +66,7 @@
         position: absolute;
         left: 0;
     }
-    
+
 }
 
 .product-labels{
