--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,5 @@
 $base-color: #574AE2;
-$form-fields: #EEF0F2; 
+$form-fields: #EEF0F2;
 $black-text: #000000;
 $success: #0CCE6B;
 $fail-notifications: #E63946;
@@ -8,7 +8,7 @@ $white: #FFFFFF;
 $text-grey: #9A9A9A;
 
 
-$table-header: #1976D2;
+$side-border:  #3F75F4;
 $table-header-color: #000000;
 $table-border: #E5E5E5;
 $row-bg: #ffffff;
