--- a/src/app/components/admin-body/admin-body.component.html
+++ b/src/app/components/admin-body/admin-body.component.html
@@ -63,14 +63,14 @@
         </span>
     </p>
    </div>
-   <div class="statistics" onclick="displayCalendar()">
+   <div class="statistics" onclick="">
     <span>Sales details</span>
-            <select class="selection">
+            <select class="selection" onclick="displayCalendar($value)">
                 <option value="">Last 7 days</option>
-                <option value="">Last 7 days</option>
-                <option value="">Last 7 days</option>
-                <option value="">Last 7 days</option>
-                <option value="">Last 7 days</option>
+                <option value="">Last 21 days</option>
+                <option value="">Last 28 days</option>
+                <option value="">Last 35 days</option>
+                <option value="">Last 42 days</option>
                 </select>
    </div>
    <div class="calendar">
