--- a/src/app/components/admin-body/admin-body.component.scss
+++ b/src/app/components/admin-body/admin-body.component.scss
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
+@import "./../../../variables.scss";
+*{
+    font-family: 'DM Sans', sans-serif !important;
+}
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+// .container-fluid{
+//     background: gainsboro;
+// }
+
 .content{
     width: 85%;
     margin-left: 12.6em;
@@ -14,7 +29,7 @@
     height: 100px;
     margin-left: 3em;
     margin-top: 1em;
-    box-shadow: 1px 1px 1px 1px #ccc;
+   box-shadow: 0px 8px 24px rgba(17,17,26,0.1), 0px 16px 56px rgba(17,17,26,0.1), 0px 24px 80px rgba(17,17,26,0.1);
     border-radius: 2px;
     height: 150px;
 }
@@ -61,7 +76,7 @@
     margin-left: 3em;
     margin-top: 1em;
     border-radius: 5px;
-    box-shadow: 1px 1px 1px 1px #ccc;
+    box-shadow: 0.4px 0.4px 3px 0.4px #ccc;
     background:#C4C4C4;
 }
 .statistics span{
@@ -73,7 +88,7 @@
     width: 425px;
     margin-left: 43em;
     margin-top: -18.8em;
-    box-shadow: 1px 1px 1px 1px #ccc;
+    box-shadow:0.4px 0.4px 3px 0.4px #ccc;
 }
 .selection{
     margin-left: 25em;
@@ -89,4 +104,8 @@
 .number a{
     text-decoration: none;
     color: #0CCE6B;
+}
+.selection>option{
+background:#fff;
+font-size: 14px;
 }
