--- a/src/app/components/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/components/admin-sidebar/admin-sidebar.component.html
@@ -17,7 +17,7 @@
   
    <div>
        <img src="../../../assets/images/Vector (1).png" />
-    <a>Products</a>
+    <a href="">Products</a>
    </div>
    
     <div>
