--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
       <div class="nav-linnks">
         <div class="nav-links">
           <div class="sub-nav-link">
-          <a class="" routerLink="/dashboard" [ngClass]="{'activeSpan': currentPage === '/'} ">
+          <a class="" routerLink="/dashboard" [ngClass]="{'activeSpan': currentPage === '/dashboard'} ">
             <img src="../../../assets/images/dashboard.svg">
             Dashboard</a>
           </div>
