--- a/src/app/components/admin-body/admin-body.component.scss
+++ b/src/app/components/admin-body/admin-body.component.scss
@@ -1,111 +1,109 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
 @import "./../../../variables.scss";
-*{
-    font-family: 'DM Sans', sans-serif !important;
-}
+
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-// .container-fluid{
-//     background: gainsboro;
-// }
-
-.contentModified{
-    width: 85%;
-    margin-left: 12.6em;
-    margin-top: -32em;
-    height: 85.5vh;
-}
-.dash-span{
-    font-weight: bold;
-    margin-left: 3em;
-}
-.users{
-    width: 250px;
-    background-color: #fff;
-    height: 100px;
-    margin-left: 3em;
-    margin-top: 1em;
-   box-shadow: 0px 8px 24px rgba(17,17,26,0.1), 0px 16px 56px rgba(17,17,26,0.1), 0px 24px 80px rgba(17,17,26,0.1);
-    border-radius: 2px;
-    height: 150px;
-}
-.sp1{
-    font-size: 15px;
-    display: block;
-    padding-top: 1.5em;
-    padding-left: 1em;
-}
-.sp2{
-    font-weight: bold;
-    padding-left: 1em;
-    top: 1em;
-}
-.customers{
-    width: 60px;
-    height: 60px;
-    background: rgba(87, 74, 226, 0.08);
-    margin-left: 10em;
-    margin-top: -3em;
-    border-radius: 50%;
-}
-.customers img{
-    margin-top: 1em;
-    margin-left: 1.2em;
-    width: 20px;
-    height: 30px;
-}
-.orders{
-    margin-left: 20em;
-    margin-top: -9.4em;
-}
-.revenue{
-    margin-left: 37em;
-    margin-top: -9.4em;
-}
-.sales{
- margin-left: 54em;
- margin-top: -9.4em;
-}
 .statistics{
-    width: 620px;
-    height: 305px;
-    margin-left: 3em;
-    margin-top: 1em;
-    border-radius: 5px;
-    box-shadow: 0.4px 0.4px 3px 0.4px #ccc;
-    background:#C4C4C4;
+  margin-top: 4em;
 }
-.statistics span{
-    padding-left: 2em;
-    font-weight: bold;
-}
-.calendar{
-    height: 300px;
-    width: 425px;
-    margin-left: 43em;
-    margin-top: -18.8em;
-    box-shadow:0.4px 0.4px 3px 0.4px #ccc;
-}
-.selection{
-    margin-left: 25em;
-    margin-top: 2em;
-    border-radius: 23.5px;
-    height: 30px;
-    background: #c4c4c4;
-}
-.trending img{
-    width: 25px;
-    height: 15px;
-}
-.number a{
-    text-decoration: none;
-    color: #0CCE6B;
-}
-.selection>option{
-background:#fff;
-font-size: 14px;
-}
+
+// .contentModified{
+//     width: 85%;
+//     margin-left: 12.6em;
+//     margin-top: -32em;
+//     height: 85.5vh;
+// }
+// .dash-span{
+//     font-weight: bold;
+//     margin-left: 3em;
+// }
+// .users{
+//     width: 250px;
+//     background-color: #fff;
+//     height: 100px;
+//     margin-left: 3em;
+//     margin-top: 1em;
+//    box-shadow: 0px 8px 24px rgba(17,17,26,0.1), 0px 16px 56px rgba(17,17,26,0.1), 0px 24px 80px rgba(17,17,26,0.1);
+//     border-radius: 2px;
+//     height: 150px;
+// }
+// .sp1{
+//     font-size: 15px;
+//     display: block;
+//     padding-top: 1.5em;
+//     padding-left: 1em;
+// }
+// .sp2{
+//     font-weight: bold;
+//     padding-left: 1em;
+//     top: 1em;
+// }
+// .customers{
+//     width: 60px;
+//     height: 60px;
+//     background: rgba(87, 74, 226, 0.08);
+//     margin-left: 10em;
+//     margin-top: -3em;
+//     border-radius: 50%;
+// }
+// .customers img{
+//     margin-top: 1em;
+//     margin-left: 1.2em;
+//     width: 20px;
+//     height: 30px;
+// }
+// .orders{
+//     margin-left: 20em;
+//     margin-top: -9.4em;
+// }
+// .revenue{
+//     margin-left: 37em;
+//     margin-top: -9.4em;
+// }
+// .sales{
+//  margin-left: 54em;
+//  margin-top: -9.4em;
+// }
+// .statistics{
+//     width: 620px;
+//     height: 305px;
+//     margin-left: 3em;
+//     margin-top: 1em;
+//     border-radius: 5px;
+//     box-shadow: 0.4px 0.4px 3px 0.4px #ccc;
+//     background:#C4C4C4;
+// }
+// .statistics span{
+//     padding-left: 2em;
+//     font-weight: bold;
+// }
+// .calendar{
+//     height: 300px;
+//     width: 425px;
+//     margin-left: 43em;
+//     margin-top: -18.8em;
+//     box-shadow:0.4px 0.4px 3px 0.4px #ccc;
+// }
+// .selection{
+//     margin-left: 25em;
+//     margin-top: 2em;
+//     border-radius: 23.5px;
+//     height: 30px;
+//     background: #c4c4c4;
+// }
+// .trending img{
+//     width: 25px;
+//     height: 15px;
+// }
+// .number a{
+//     text-decoration: none;
+//     color: #0CCE6B;
+// }
+// .selection>option{
+// background:#fff;
+// font-size: 14px;
+// }
