--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -21,7 +21,7 @@
 
 
                 <div class="col-md-3 addP">
-                  <a class="btn">+ Add Products</a>
+                  <a class="btn" (click)="openAddMaterial()">+ Add Products</a>
                 </div>
               </div>
               <div class="row">
