--- a/src/app/components/admin-body/admin-body.component.html
+++ b/src/app/components/admin-body/admin-body.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-3">
-        <div class="card" style="width: 18rem;">
+        <div class="card dataCard" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -9,7 +9,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card" style="width: 18rem;">
+        <div class="card dataCard" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card" style="width: 18rem;">
+        <div class="card dataCard" style="width: 18rem;">
          <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card" style="width: 18rem;">
+        <div class="card dataCard" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -35,7 +35,7 @@
   </div>
   <div class="row statistics">
     <div class="col-md-6">
-      <div class="card">
+      <div class="card statisticCard">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="col-md-6">
-      <div class="card">
+      <div class="card statisticCard">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
