calendar rendering failed

--- a/src/app/components/admin-body/admin-body.component.html
+++ b/src/app/components/admin-body/admin-body.component.html
@@ -1,34 +1,62 @@
+<link href="https://cdn.syncfusion.com/ej2/ej2-base/styles/material.css" rel="stylesheet" />
+<link href="https://cdn.syncfusion.com/ej2/ej2-buttons/styles/material.css" rel="stylesheet" />
+<link href="https://cdn.syncfusion.com/ej2/ej2-popups/styles/material.css" rel="stylesheet" />
+<link href="https://cdn.syncfusion.com/ej2/ej2-calendars/styles/material.css" rel="stylesheet" />
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-3">
         <div class="card dataCard" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Total Users</h5>
+            <p class="card-text">
+              <span>1,200</span>
+              <span>
+                <img src="../../../assets/images/trending.png"/>
+                +250% this month
+              </span>
+            </p>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card dataCard" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Total Orders</h5>
+            <p class="card-text">
+              <span>878</span>
+              <span>
+                <img src="../../../assets/images/trending-down.png"/>
+                -40% this month
+              </span>
+            </p>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card dataCard" style="width: 18rem;">
          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Total Revenue</h5>
+            <p class="card-text">
+              <span>&#36;2000</span>
+              <span>
+                <img src="../../../assets/images/trending.png"/>
+                +250% this month
+              </span>
+            </p>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card dataCard" style="width: 18rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Total Sales</h5>
+            <p class="card-text">
+              <span>1,200</span>
+              <span>
+                <img src="../../../assets/images/trending.png"/>
+                +250% this month
+              </span>
+            </p>
           </div>
         </div>
       </div>
@@ -37,8 +65,17 @@
     <div class="col-md-6">
       <div class="card statisticCard">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">sales details</h5>
+          <span>
+            <select class="selectDays">
+              <option value="">Last 7 days</option>
+              <option value="">Last 14 days</option>
+              <option value="">Last 21 days</option>
+            </select>
+          </span>
+          <p class="card-text">
+
+          </p>
         </div>
       </div>
     </div>
@@ -46,7 +83,10 @@
       <div class="card statisticCard">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div>
+            <!-- <ejs-calendar id=calendar [value]='value' [min]='minDate' [max]='maxDate' ></ejs-calendar > -->
+          </div>
+
         </div>
       </div>
     </div>
